service worker added

--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,14 @@
 
     <script src="src/person.js"></script>
     <script src="src/app.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/sw.js').then(function(registration) {
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }).catch(function(err) {
+                console.log('ServiceWorker registration failed: ', err);
+            });
+        }
+    </script>
 </body>
 </html>
